*probleme index not fixed yet

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -220,7 +220,7 @@
                                 <div class="col-sm-6 col-md-3 p0">
                                     <div class="box-two proerty-item">
                                         <div class="item-thumb">
-                                            <a href="property-1.html" ><img src="{{p.pathImage}}"></a>
+                                            <a href="" ><img src="{{p.pathImage}}"></a>
                                         </div>
 
                                         <div class="item-entry overflow">
