--- a/templates/property/property_list.html.twig
+++ b/templates/property/property_list.html.twig
@@ -166,9 +166,9 @@
                                             <div class="property-icon">
                                                 <img src="/assets/img/icon/bed.png">({{p.beds}})|
                                                 <img src="/assets/img/icon/shawer.png">({{p.baths}})|
-                                               <a href="/property/delete/{{p.propertyId}}">Delete</a>
-                        <a href="/property/edit/{{p.propertyId}}">Edit</a>
-                         <a href="/property/googlemap/{{p.propertyId}}">Goole Maps</a>
+                                               <a href="/property/delete/{{p.propertyId}}"><img src="/assets/img/icon/delete.png" width="20" alt="delete"></a>
+                                               <a href="/property/edit/{{p.propertyId}}"><img src="/assets/img/icon/pencil.png" width="20"></a>
+                                               <a href="/property/googlemap/{{p.propertyId}}"><img src="/assets/img/icon/googlemaps.png" width="20"></a>
                                             </div>
                                         </div>
 
