--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -113,8 +113,8 @@
                                     <select id="basic" class="selectpicker show-tick form-control">
                                         <option> -Status- </option>
                                         <option>Rent </option>
-                                        <option>Boy</option>
-                                        <option>used</option>  
+                                        <option>Buy</option>
+                                        
 
                                     </select>
                                 </div>
