--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -57,18 +57,7 @@
                         <button class="navbar-btn nav-button wow bounceInRight login" onclick=" window.open('/user/login')" data-wow-delay="0.4s">Login</button>
                         <button class="navbar-btn nav-button wow fadeInRight" onclick=" window.open('/user/register')" data-wow-delay="0.5s">Register</button>
                     </div>
-                    <ul class="main-nav nav navbar-nav navbar-right">
-                        <li class="dropdown ymm-sw " data-wow-delay="0.1s">
-                            <a href="/" class="dropdown-toggle active" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Home <b class="caret"></b></a>
-                           
-                        </li>
-
-                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="properties.html">Properties</a></li>
-                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="property.html">Property</a></li>
-                    
-
-                        <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="contact.html">Contact</a></li>
-                    </ul>
+                  
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
@@ -96,19 +85,9 @@
                                 <button class="btn  toggle-btn" type="button"><i class="fa fa-bars"></i></button>
 
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Key word">
+                                    <input type="text" class="form-control" placeholder="Price" name="price" value="price">
                                 </div>
-                                <div class="form-group">                                   
-                                    <select id="lunchBegins" class="selectpicker" data-live-search="true" data-live-search-style="begins" title="Select your city">
-
-                                        <option>New york, CA</option>
-                                        <option>Paris</option>
-                                        <option>Casablanca</option>
-                                        <option>Tokyo</option>
-                                        <option>Marraekch</option>
-                                        <option>kyoto , shibua</option>
-                                    </select>
-                                </div>
+                              
                                 <div class="form-group">                                     
                                     <select id="basic" class="selectpicker show-tick form-control">
                                         <option> -Status- </option>
@@ -178,27 +157,16 @@
                         <div class="col-md-12 "> 
                             <div class="col-xs-10 page-subheader sorting pl0">
 
-                                <ul class="sort-by-list">
-                                    <li class="active">
-                                        <a href="javascript:void(0);" class="order_by_date" data-orderby="property_date" data-order="ASC">
-                                            Property Date <i class="fa fa-sort-amount-asc"></i>					
-                                        </a>
-                                    </li>
-                                    <li class="">
-                                        <a href="javascript:void(0);" class="order_by_price" data-orderby="property_price" data-order="DESC">
-                                            Property Price <i class="fa fa-sort-numeric-desc"></i>						
-                                        </a>
-                                    </li>
-                                </ul><!--/ .sort-by-list-->
+                               
 
                                 <div class="items-per-page">
                                     <label for="items_per_page"><b>Property per page :</b></label>
                                     <div class="sel">
                                         <select id="items_per_page" name="per_page">
                                             <option value="3">3</option>
-                                            <option value="6">6</option>
+                                            <option selected="selected"value="6">6</option>
                                             <option value="9">9</option>
-                                            <option selected="selected" value="12">12</option>
+                                            <option  value="12">12</option>
                                             <option value="15">15</option>
                                             <option value="30">30</option>
                                             <option value="45">45</option>
