--- a/templates/property/property_list.html.twig
+++ b/templates/property/property_list.html.twig
@@ -75,16 +75,16 @@
                         <button class="navbar-btn nav-button wow fadeInRight" onclick=" window.open('/user/register')" data-wow-delay="0.5s">Register</button>
                     </div>
                     <ul class="main-nav nav navbar-nav navbar-right">
-                        <li class="dropdown ymm-sw " data-wow-delay="0.1s">
-                            <a href="/" class="dropdown-toggle active" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Home <b class="caret"></b></a>
+                        <li class="wow fadeInDown" data-wow-delay="0.1s">
+                            <a href="/"  data-delay="200">Home <b class="caret"></b></a>
                            
                         </li>
 
-                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="properties.html">Properties</a></li>
-                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="property.html">Property</a></li>
+                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/list">Properties</a></li>
+                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/add">Property</a></li>
                     
 
-                        <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="contact.html">Contact</a></li>
+                        <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="/chat/send">Chat</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -130,9 +130,9 @@
                                     <div class="sel">
                                         <select id="items_per_page" name="per_page">
                                             <option value="3">3</option>
-                                            <option value="6">6</option>
+                                            <option selected="selected" value="6">6</option>
                                             <option value="9">9</option>
-                                            <option selected="selected" value="12">12</option>
+                                            <option  value="12">12</option>
                                             <option value="15">15</option>
                                             <option value="30">30</option>
                                             <option value="45">45</option>
