--- a/templates/user/register_user.html.twig
+++ b/templates/user/register_user.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Register{% endblock %}
 {% block headextra %}
 
+    <link rel="stylesheet" href="/assets/css/wizard.css">
+
+
     <script>
         $(document).ready(function () {
             // respond to all events that may change the value of input
@@ -97,68 +100,161 @@
     </div>
     <!-- End page header -->
     <!-- register-area -->
-    <div class="register-area" style="background-color: rgb(249, 249, 249);">
-        <div class="container">
-            <div class="col-md-8">
-                <div class="box-for overflow">
-                    <div class="col-md-6 col-xs-6 register-blocks">
-                        <h2>New account : </h2> 
-                        {% if errorList %}
-                            <ul>
-                                {% for error in errorList %}
-                                    <li>{{error}}</li>
-                                    {% endfor %}
-                            </ul>
-                        {% endif %}
-                        <form enctype="multipart/form-data" method="post">
-                            <div class="form-group">
-                                <label for="name">Name</label>
-                                <input type="text" name="name" value="{{v.name}}" class="form-control" id="name">
-                            </div>
-                            <div class="form-group">
-                                <label for="Address">Address</label>
-                                <input type="text" name="address" value="{{v.address}}" class="form-control" id="address">
-                            </div>
-                            <div class="form-group">
-                                <label for="Phone">Phone</label>
-                                <input type="text" name="phone" value="{{v.phone}}" class="form-control" id="phone">
-                            </div>
-                            <div class="form-group">
-                                <label for="Role">User Role</label>
-                                <select name="userRole"  id="basic" class="selectpicker show-tick form-control">
-                                    <option value="Admin" selected="selected">Admin</option>
-                                    <option value="Buyer">Buyer</option>
-                                    <option value="Seller">Seller</option>
 
-                                </select>
+    <div class="content-area submit-property" style="background-color: #FCFCFC;">&nbsp;
+        <div class="container">
+            <div class="clearfix" > 
+                <div class="wizard-container"> 
+
+                    <div class="wizard-card ct-wizard-orange" id="wizardProperty">
+                        <form enctype="multipart/form-data" method="post">                        
+                            <div class="wizard-header">
+                                <h3>
+                                    <b>Register</b> <br>
+
+                                </h3>
+                                {% if errorList %}
+                                    <ul>
+                                        {% for error in errorList %}
+                                            <li>{{error}}</li>
+                                            {% endfor %}
+                                    </ul>
+                                {% endif %}
                             </div>
-                            <div class="form-group">
-                                <label for="property-images">Chose Images :</label>
-                                <input name="memberImage" class="form-control" type="file" id="property-images">
-                                <p class="help-block">Select your image .</p>
+
+                            <ul>
+                                <li><a href="#step1" data-toggle="tab">Step 1 </a></li>
+                                <li><a href="#step2" data-toggle="tab">Step 2 </a></li>
+                                <li><a href="#step3" data-toggle="tab">Step 3 </a></li>
+                                <li><a href="#step4" data-toggle="tab">Finished </a></li>
+                            </ul>
+
+                            <div class="tab-content">
+
+                                <div class="tab-pane" id="step1">
+                                    <div class="row p-b-15  ">
+                                        <h4 class="info-text"> Let's start </h4>
+                                      
+                                        <div class="col-sm-6">
+                                            <div class="form-group">
+                                                <label for="name">Name</label>
+                                                <input type="text" name="name" value="{{v.name}}" class="form-control" id="name">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="Address">Address</label>
+                                                <input type="text" name="address" value="{{v.address}}" class="form-control" id="address">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--  End step 1 -->
+
+                                <div class="tab-pane" id="step2">
+                                  
+                                    <div class="row">
+                                        <div class="col-sm-8"> 
+                                            <div class="col-sm-8"> 
+                                                <div class="form-group">
+                                                    <label for="Phone">Phone</label>
+                                                    <input type="text" name="phone" value="{{v.phone}}" class="form-control" id="phone">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="Role">User Role</label>
+                                                    <select name="userRole"  id="basic" class="selectpicker show-tick form-control">
+                                                        <option value="Admin" selected="selected">Admin</option>
+                                                        <option value="Buyer">Buyer</option>
+                                                        <option value="Seller">Seller</option>
+
+                                                    </select>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="property-images">Chose Image :</label>
+                                                    <input name="memberImage" class="form-control" type="file" id="property-images">
+                                                    <p class="help-block">Select your image .</p>
+                                                </div> 
+                                            </div> 
+                                        </div>
+
+
+                                        <br>
+                                    </div>
+                                </div>
+                                <!-- End step 2 -->
+
+                                <div class="tab-pane" id="step3">                                        
+                                 
+                                    <div class="row">  
+                                        <div class="col-sm-6">
+                                            
+                                        <div class="form-group">
+                                            <label for="email">Email</label>
+                                            <input type="email" name="email" class="form-control" id="email"><span id="isTaken"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="password">Password</label>
+                                            <input type="password" name="pass1" class="form-control" id="password">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="password">RePassword</label>
+                                            <input type="password" name="pass2" class="form-control" id="password">
+                                        </div>
+                                    </div>
+                                         </div>
+                                </div>
+                                <!--  End step 3 -->
+
+
+                                <div class="tab-pane" id="step4">                                        
+                                    <h4 class="info-text"> Finished and submit </h4>
+                                    <div class="row">  
+                                        <div class="col-sm-12">
+                                            <div class="">
+                                                <p>
+                                                    <label><strong>Terms and Conditions</strong></label>
+                                                    By accessing or using  GARO ESTATE services, such as 
+                                                    posting your property advertisement with your personal 
+                                                    information on our website you agree to the
+                                                    collection, use and disclosure of your personal information 
+                                                    in the legal proper manner
+                                                </p>
+
+                                                <div class="checkbox">
+                                                    <label>
+                                                        <input type="checkbox" /> <strong>Accept termes and conditions.</strong>
+                                                    </label>
+                                                </div> 
+
+                                            </div> 
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--  End step 4 -->
+
                             </div>
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" name="email" class="form-control" id="email"><span id="isTaken"></span>
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" name="pass1" class="form-control" id="password">
-                            </div>
-                            <div class="form-group">
-                                <label for="password">RePassword</label>
-                                <input type="password" name="pass2" class="form-control" id="password">
-                            </div>
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-default">Register</button>
-                            </div>
+
+                            <div class="wizard-footer">
+                                <div class="pull-right">
+                                    <input type='button' class='btn btn-next btn-primary' name='next' value='Next' />
+                                    <input type='submit' class='btn btn-finish btn-primary ' name='finish' value='Register' />
+                                   
+                                </div>
+
+                                <div class="pull-left">
+                                    <input type='button' class='btn btn-previous btn-default' name='previous' value='Previous' />
+                                </div>
+                                <div class="clearfix"></div>                                            
+                            </div>	
                         </form>
                     </div>
-                </div>
+                    <!-- End submit form -->
+                </div> 
             </div>
-
         </div>
-    </div>      
+    </div>   
+
+
+
+
     <!-- Footer area-->
     <div class="footer-area">
 
@@ -299,23 +395,24 @@
 
 {% endblock %}
 {% block footerExtra %}
-    <script src="/assets/js/modernizr-2.6.2.min.js"></script>
-
-    <script src="/assets/js/jquery-1.10.2.min.js"></script>
+    <script src="/assets/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="/assets/js//jquery-1.10.2.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/js/bootstrap-select.min.js"></script>
     <script src="/assets/js/bootstrap-hover-dropdown.js"></script>
-
     <script src="/assets/js/easypiechart.min.js"></script>
     <script src="/assets/js/jquery.easypiechart.min.js"></script>
-
-    <script src="/assets/js/owl.carousel.min.js"></script>   
+    <script src="/assets/js/owl.carousel.min.js"></script>
     <script src="/assets/js/wow.js"></script>
-
     <script src="/assets/js/icheck.min.js"></script>
-    <script src="/assets/js/price-range.js"></script>
+
+    <script src="/assets/js/price-range.js"></script> 
+    <script src="/assets/js/jquery.bootstrap.wizard.js" type="text/javascript"></script>
+    <script src="/assets/js/jquery.validate.min.js"></script>
+    <script src="/assets/js/wizard.js"></script>
 
     <script src="/assets/js/main.js"></script>
+
 
 
 {% endblock %}
