* fixe the design

--- a/templates/user/login_user.html.twig
+++ b/templates/user/login_user.html.twig
@@ -316,7 +316,7 @@ function onSignInCallback(authResult) {
                         <p>
                             <a class="login-social" href="{{loginUrl}}"><i class="fa fa-facebook"></i>&nbsp;Facebook</a> 
                             
-                            <a class="login-social" href="process.php"><i class="fa fa-linkedin-square"></i>&nbsp;Gmail</a> 
+                            <a class="login-social" href="process.php"><i class="fa fa-linkedin-square"></i>&nbsp;LinkedIn</a> 
                             <a class="login-social" href="#"><i class="fa fa-twitter"></i>&nbsp;Twitter</a>  
                         </p> 
                     </div>
