--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -68,9 +68,9 @@
             <div class="slider">
                 <div id="bg-slider" class="owl-carousel owl-theme">
 
-                    <div class="item"><img src="assets/img/slide1/slider-image-1.jpg" alt="Mirror Edge"></div> 
-                    <div class="item"><img src="assets/img/slide1/slider-image-2.jpg" alt="The Last of us"></div> 
-                    <div class="item"><img src="assets/img/slide1/slider-image-4.jpg" alt="GTA V"></div>   
+                    <div class="item"><img src="/assets/img/slide1/slider-image-1.jpg" alt="Mirror Edge"></div> 
+                    <div class="item"><img src="/assets/img/slide1/slider-image-2.jpg" alt="The Last of us"></div> 
+                    <div class="item"><img src="/assets/img/slide1/slider-image-4.jpg" alt="GTA V"></div>   
 
                 </div>
             </div>
@@ -163,8 +163,8 @@
                                     <label for="items_per_page"><b>Property per page :</b></label>
                                     <div class="sel">
                                         <select id="items_per_page" name="per_page">
-                                            <option value="3">3</option>
-                                            <option selected="selected"value="6">6</option>
+                                            <option selected="selected" value="4">4</option>
+                                            <option value="6">6</option>
                                             <option value="9">9</option>
                                             <option  value="12">12</option>
                                             <option value="15">15</option>
@@ -188,11 +188,11 @@
                                 <div class="col-sm-6 col-md-3 p0">
                                     <div class="box-two proerty-item">
                                         <div class="item-thumb">
-                                            <a href="" ><img src="{{p.pathImage}}"></a>
+                                       <img src="{{p.imagePath}}">
                                         </div>
 
                                         <div class="item-entry overflow">
-                                            <h5><a href="property-1.html"> {{p.FILE_NAME}} </a></h5>
+                                            <h5><a href=""> {{p.FILE_NAME}} </a></h5>
                                             <div class="dot-hr"></div>
                                             <span class="pull-left"><b> Area :</b> 120m </span>
                                             <span class="proerty-price pull-right"> $ 300,000</span>
