--- a/templates/photo/addphotos.html.twig
+++ b/templates/photo/addphotos.html.twig
@@ -64,9 +64,10 @@
 
                     <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/list">Properties</a></li>
                     <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/add">Property</a></li>
-
-
-                    <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="/chat/send">Contact</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/photo/add">Images</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/chat/send">Chat</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/News/list">News</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="#">Contact</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -105,7 +106,7 @@
                         <form method="POST" enctype="multipart/form-data">
                             <label for="property-images">Chose Images :</label>
                             <input class="form-control" type="file" name="files[]" multiple=""  id="property-images">
-                            <p class="help-block">Select multipel images for your property .</p>
+                            <p class="help-block">Select multiple  images for your property .</p>
                              <div class="text-center">
                                 <button type="submit" class="btn btn-default"> Add photos</button>
                             </div>
