--- a/templates/property/property_list.html.twig
+++ b/templates/property/property_list.html.twig
@@ -76,15 +76,16 @@
                     </div>
                     <ul class="main-nav nav navbar-nav navbar-right">
                         <li class="wow fadeInDown" data-wow-delay="0.1s">
-                            <a href="/"  data-delay="200">Home <b class="caret"></b></a>
-                           
-                        </li>
+                        <a href="/"  data-delay="200">Home <b class="caret"></b></a>
 
-                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/list">Properties</a></li>
-                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/add">Property</a></li>
-                    
+                    </li>
 
-                        <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="/chat/send">Chat</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/list">Properties</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/add">Property</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/photo/add">Images</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/chat/send">Chat</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/news/list">News</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="#">Contact</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
