--- a/templates/property/searchgooglemap.html.twig
+++ b/templates/property/searchgooglemap.html.twig
@@ -1,92 +1,148 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-        <meta charset="utf-8">
-        <title>Circles</title>
-        <style>
-            /* Always set the map height explicitly to define the size of the div
-             * element that contains the map. */
-            #map {
-                height: 100%;
-            }
-            /* Optional: Makes the sample page fill the window. */
-            html, body {
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
-        </style>
+{% extends "master.html.twig" %}
 
-    </head>
-    <body>
-        <div id="map"></div>
+{% block title %}Google map{% endblock %}
+{% block headextra %}
+    
+     <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 2,
+          center: new google.maps.LatLng(2.8,-187.3),
+          mapTypeId: 'terrain'
+        });
 
-        <script>
-            // This example creates circles on the map, representing populations in North
-            // America.
+        // Create a <script> tag and set the USGS URL as the source.
+        var script = document.createElement('script');
+        // This example uses a local copy of the GeoJSON stored at
+        // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
+        script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
+        document.getElementsByTagName('head')[0].appendChild(script);
+      }
 
-            // First, create an object containing LatLng and population for each city.
+      // Loop through the results array and place a marker for each
+      // set of coordinates.
+      window.eqfeed_callback = function(results) {
+        for (var i = 0; i < results.features.length; i++) {
+          var coords = results.features[i].geometry.coordinates;
+          var latLng = new google.maps.LatLng(coords[1],coords[0]);
+          var marker = new google.maps.Marker({
+            position: latLng,
+            map: map
+          });
+        }
+      }
+    </script>
+  {%endblock %}
+{% block content %}
+    
+    
+    
+     <!-- Body content -->
 
-            var citymap = {
-            {% for p in list %}
+    <div class="header-connect">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-sm-8  col-xs-12">
+                    <div class="header-half header-call">
+                        <p>
+                            <span><i class="pe-7s-call"></i> 514 296 0249</span>
+                            <span><i class="pe-7s-mail"></i> realestate@company.com</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-2 col-md-offset-5  col-sm-3 col-sm-offset-1  col-xs-12">
+                    <div class="header-half header-social">
+                        <ul class="list-inline">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-vine"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>            
+    <!--End top header -->
 
-                    p.propertyType: {
-                    center: {lat: p.latitude, lng: p.longitude},
-                            population: p.price
-                    }
-            {% endfor %}
-              };  
-                function initMap() {
-                // Create the map.
-                var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 4,
-                     center: {lat: 37.090, lng: -95.712},
-                        mapTypeId: 'terrain'
-                });
-                // Construct the circle for each value in citymap.
-                // Note: We scale the area of the circle based on the population.
-                for (var city in citymap) {
-                // Add the circle for this city to the map.
-                var cityCircle = new google.maps.Circle({
-                strokeColor: '#FF0000',
-                        strokeOpacity: 0.8,
-                        strokeWeight: 2,
-                        fillColor: '#FF0000',
-                        fillOpacity: 0.35,
-                        map: map,
-                        center: citymap[city].center,
-                        radius: Math.sqrt(citymap[city].population) * 100
-                });
-                }
+    <nav class="navbar navbar-default ">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"><img src="/assets/img/logo.png" alt=""></a>
+            </div>
 
-                }
-                var infowindow = new google.maps.InfoWindow();
-                var service = new google.maps.places.PlacesService(map);
-                var image = '/images/homepointer.png';
-                var marker = new google.maps.Marker({
-                map: map,
-                        position: posLatLng,
-                        
-                        icon:image
-                });
-                service.getDetails({
-                placeId: 'ChIJN1t_tDeuEmsRUsoyG83frY4'
-                }, function (place, status) {
-                if (status === google.maps.places.PlacesServiceStatus.OK) {
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse yamm" id="navigation">
+                <div class="button navbar-right">
+                    <button class="navbar-btn nav-button wow bounceInRight login" onclick=" window.open('/user/login')" data-wow-delay="0.4s">Login</button>
+                    <button class="navbar-btn nav-button wow fadeInRight" onclick=" window.open('/user/register')" data-wow-delay="0.5s">Register</button>
+                </div>
+                <ul class="main-nav nav navbar-nav navbar-right">
+                    <li class="wow fadeInDown" data-wow-delay="0.1s">
+                        <a href="/"  data-delay="200">Home <b class="caret"></b></a>
 
-                google.maps.event.addListener(marker, 'click', function () {
-                infowindow.setContent('<div><strong>' + place.name + '</strong><br>' +
-                        'Place ID: ' + place.place_id + '<br>' +
-                        place.formatted_address + '</div>');
-                infowindow.open(map, this);
-                });
-                }
-                });
-        </script>
+                    </li>
 
-        <script async defer
-                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBi_RmcXLnf2aoOIGzGGVPdrnaWQD2jrWs&callback=initMap">
-        </script>
-    </body>
-</html>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/list">Properties</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/property/add">Property</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/photo/add">Images</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="/chat/send">Chat</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="//news/list">News</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="#">Contact</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <!-- End of nav bar -->
+
+    <div class="page-head"> 
+        <div class="container">
+            <div class="row">
+                <div class="page-head-content">
+                    <h1 class="page-title">Property / Google map</h1>               
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End page header -->
+    <br>
+    <br>
+            <div id="map"></div>
+            <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBi_RmcXLnf2aoOIGzGGVPdrnaWQD2jrWs&libraries=places&callback=initMap">
+            </script>
+       
+    {% endblock content %}
+    {% block footerExtra %}
+    <script src="/assets/js/modernizr-2.6.2.min.js"></script>
+
+    <script src="/assets/js/jquery-1.10.2.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/js/bootstrap-select.min.js"></script>
+    <script src="/assets/js/bootstrap-hover-dropdown.js"></script>
+
+    <script src="/assets/js/easypiechart.min.js"></script>
+    <script src="/assets/js/jquery.easypiechart.min.js"></script>
+
+    <script src="/assets/js/owl.carousel.min.js"></script>   
+    <script src="/assets/js/wow.js"></script>
+
+    <script src="/assets/js/icheck.min.js"></script>
+    <script src="/assets/js/price-range.js"></script>
+
+    <script src="/assets/js/main.js"></script>
+
+
+{% endblock %}
+
+  
