--- a/templates/user/login_user.html.twig
+++ b/templates/user/login_user.html.twig
@@ -317,7 +317,7 @@ function onSignInCallback(authResult) {
                             <a class="login-social" href="{{loginUrl}}"><i class="fa fa-facebook"></i>&nbsp;Facebook</a> 
                             
                             <a class="login-social" href="process.php"><i class="fa fa-linkedin-square"></i>&nbsp;LinkedIn</a> 
-                            <a class="login-social" href="#"><i class="fa fa-twitter"></i>&nbsp;Twitter</a>  
+                            <a class="login-social" href="#"><i class="fa fa-google-plus-square"></i>&nbsp;Google plus</a>  
                         </p> 
                     </div>
 
